@@ -1,6 +1,10 @@
-2005-06-02  Jim Ingham  <jingham@apple.com>
+2005-06-03  Daniel Steffen  <das@users.sourceforge.net>
 
 	*** 8.4.10 TAGGED FOR RELEASE ***
+
+	* macosx/Makefile: fixed 'embedded' target.
+
+2005-06-02  Jim Ingham  <jingham@apple.com>
 
         Another patch from M. Kirkham.
 	
